--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -59,6 +59,10 @@ a:hover{
   text-decoration: underline;
 }
 
+.unmargin {
+  margin-top:10px;
+}
+
 .table-wrapper{
   width: 100%;
   overflow-x: scroll;
@@ -1220,4 +1224,260 @@ footer a {
     left:50px;
     right:inherit;
   }
+}
+
+
+details {
+  font: 16px "Open Sans", Calibri, sans-serif;
+  width: 1000px;
+}
+
+details > summary {
+  padding: 1px 1px;
+  width: 15em;
+  background-color: #DAEDFE;
+  border: none;
+  box-shadow: 1px 1px 1px 2px black;
+  cursor: pointer;
+}
+
+.contain {
+    max-width: 960px;
+    margin: auto;
+    padding: 0 25px;
+}
+
+.flex {
+  display: flex;
+}
+
+.publications {
+  background-color: #f9f9f9;
+  padding: 50px 0;
+}
+
+.accordion-item {
+  margin-bottom: 75px;
+}
+
+.accordion-title {
+  transition: .3s;
+  text-overflow: ellipsis;
+}
+
+.accordion-title:hover {
+  cursor: pointer;
+  color: #97310e;
+}
+
+.accordion-title-row {
+  
+}
+
+.accordion-title-row table{
+  width: 100%;
+  position:relative;
+}
+
+.accordion-title-row tr::before{
+  color: #D6410D;
+  content: '+';
+  display: inline-block;
+  font-family: 'Arimo', sans-serif;
+  font-size: 32px;
+  font-size: 2.25rem;
+  border: 2px solid;
+  -webkit-border-radius: 100%;
+  -moz-border-radius: 100%;
+  -o-border-radius: 100%;
+  border-radius: 100%;
+  width: 32px;
+  height: 32px;
+  margin-right: 10px;
+  padding: 0 8px;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+  line-height: 30px;
+  -ms-transition: .3s;
+  -moz-transition: .3s;
+  -webkit-transition: .3s;
+  transition: .3s;
+}
+
+.accordion-toggle.closed .accordion-title-row tr:before {
+  content: '+';
+}
+
+.accordion-toggle.opened .accordion-title-row tr:before {
+  content: '+';
+  color: white;
+  background-color: #D6410D;
+  webkit-transform: rotate(45deg);
+  -moz-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.accordion-toggle.opened:hover .accordion-title:before{
+  background-color: #97310e;
+}
+
+ul {
+  list-style-position: outside;
+}
+
+.accordion-title {
+  color: #D6410D;
+  font-family: 'Arimo', sans-serif;
+  font-size: 2rem;
+  font-weight: 400;
+  display:block;
+}
+
+.accordion-nonHidden {
+  margin-top: 20px;
+  margin-left: 50px;
+  border-left: 3px solid #ddd;
+  padding-left: 25px;
+  border-radius: 3px;
+}
+
+.accordion-nonHidden p {
+    font-size: 1.25rem;
+    line-height: 2em;
+}
+
+.accordion-description {
+  display: inline-block;
+  width: 100%;
+  padding-left: 50px;
+}
+
+.accordion-inner-toggle {
+  background-color: #D6410D;
+  font-family: 'Arimo', sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  float: right;
+  color: white;
+  display: inline-block;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: 0 10px;
+  border-radius: 20px;
+  transition: .3s;
+}
+
+.accordion-inner-toggle:hover {
+  cursor: pointer;
+  background-color: #97310e;
+}
+
+.accordion-inner-toggle i {
+  color: rgba(255,255,255,.5);
+}
+
+.link-to-paper {
+  display: inline-block;
+  background-color: #E8EEF7;
+  padding: 0 10px;
+  color: #316ab9;
+  margin: 10px 0;
+  border-radius: 25px;
+}
+
+.link-to-paper:hover {
+  color: #192833;
+}
+
+.content-section {
+  margin-bottom: 30px;
+}
+
+.content-section:last-child {
+  margin-bottom: 0;
+}
+
+main {
+  padding: 50px 0 0 0;
+}
+
+.caret-list i {
+  color: #FBD5C8;
+}
+
+.caret-list li {
+  margin-bottom: 20px;
+}
+
+.main {
+  margin-bottom: 75px;
+}
+
+.partner-logo {
+  max-height:100px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.logo-row {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.subscribe-button {
+  display:block;
+  background-color: #D6410D; /* DAO red*/
+  border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  transition-duration: 0.4s;
+  font-family: 'nimbus-sans';
+}
+
+.subscribe-button:hover {
+  cursor: pointer;
+  background-color: #97310e;
+  text-decoration: none;
+  color: white;
+}
+
+.contain-highlight {
+  background-color: #DAEDFE; /* DAO light blue */
+  padding: 10px;
+}
+
+.vertical-align {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+}
+
+.subscribe-col {
+  min-height: 94px
+}
+
+.no-margin {
+  margin: 0px !important
+}
+
+@media (max-width: 767px) {
+  .subscribe-col {
+    text-align: center;
+  }
+}
+
+.list-box {
+  padding-top: 25px;
+  margin-bottom: 25px;
+  background-color: #F9F7EA;
 }
